# markitdown-webui

./: .gitignore  README.md  app.py  config.py  requirements.txt  run.py  初期化コマンド.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: files.py  tasks.py
backend/app/core/: markitdown.py  queue.py
backend/app/models/: task.py
backend/app/services/: file_service.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DropZone.tsx  Header.tsx  ResultList.tsx  TaskQueue.tsx
frontend/src/hooks/: useFileUpload.ts  useTaskQueue.ts
frontend/src/services/: api.ts  taskService.ts
frontend/src/types/: index.ts
handlers/: conversion_handler.py
static/css/: styles.css
static/js/: scripts.js
taskqueue/: __init__.py  exceptions.py  queue.py  task.py
templates/: index.html
