[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pip>=25.0.1",
    "pydantic>=2.11.1",
    "python-multipart>=0.0.20",
    "typing-extensions>=4.13.0",
    "uvicorn>=0.34.0",
]
